syntax="proto2";

package dst.server.protocol.pb;

option java_package="org.dst.protocol";
option java_outer_classname="StatusProtocol";

enum Status {
    OK = 0;
    KEY_NOT_FOUND = 1;
    UNKNOWN_ERROR = 2;
};
